# nix-agent

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  flake.nix  install-skill.sh  pyproject.toml
.github/workflows/: ci.yml  site-docker.yml
docs/: agent-install.md  opencode-nixos-instructions.md  privileged-automation.md  usage.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md
examples/: claude-code-mcp.json  codex-config.toml  opencode-mcp.json
nix/: module.nix
site/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
site/__tests__/: GlyphSnowflake.test.tsx  IconLinks.test.tsx  InstallPrompt.test.tsx  docsCatalog.test.ts  docsLinks.test.ts  docsMarkdown.test.ts  docsPages.test.tsx  faceMood.test.ts  glyphAtlas.test.ts  glyphFallback.test.ts  glyphRenderLifecycle.test.tsx  layout.test.ts  page.test.tsx  shaderValidation.test.ts  shaders.test.ts  snowflakeGeometry.test.ts
site/app/: globals.css  layout.tsx  page.tsx
site/components/: DocsArticle.tsx  DocsSidebar.tsx  DocsSidebarNav.tsx  (+3 more)
tests/: test_apply_change.py  test_apply_patch_set.py  test_build_diff.py  test_check.py  test_cli.py  test_distribution.py  test_end_to_end.py  test_envelope_schemas.py  test_eval_config.py  test_fixture_corpus.py  test_format.py  test_health.py  test_imports.py  test_inspect.py  test_inspect_flake.py  test_install_script.py  test_locate_option.py  test_logparse.py  test_managed_state.py  test_mcp_smoke.py  test_models.py  test_patching.py  test_planning_boundaries.py  test_policy.py  test_public_content.py  test_runner.py  test_server.py  test_switch.py  test_switch_generations.py  test_system_apply.py  test_target.py  test_tools.py  test_validation.py
(+55 files in other folders)
