[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nix-agent"
version = "0.7.1"
description = "MCP server exposing composable NixOS/Home Manager operations: eval, locate, inspect, lint, format, build, diff, switch, generations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14,<4",
]

[project.scripts]
nix-agent = "nix_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
